Add additional modules, use packr 1.2